<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SubmissionMoviesUiUx</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_up_coming">Coming Soon</string>

    <string name="API_KEY">cefa1eb1bc52f15c39f3559046546cc2</string>

    <string name="search_hint">Search Hint</string>
    <string name="dateandtime">Date and Time</string>
    <string name="description">Description</string>

    <string name="app_homeurl">
        Visit us at <xliff:g id="application_homepage">https://battistrada.id</xliff:g>
    </string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="Movies">Movies</string>
    <string name="Name">Name</string>
    <string name="detail_movies">Detail Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="more">more</string>
    <string name="title_favorite">Favorite</string>

</resources>
