<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lv1"
    android:padding="@dimen/activity_vertical_margin">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        layout_toLeftOf="@id/data_information"/>
    <LinearLayout
        android:id="@+id/data_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Movies"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateandtime"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            />
    </LinearLayout>

</LinearLayout>