<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_movies"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            layout_toLeftOf="@id/info_detail"/>
        <LinearLayout
            android:id="@+id/info_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateandtime"
                android:layout_marginBottom="8dp"/>
            <RatingBar
                android:id="@+id/rb_rbmovie"
                android:numStars="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/description"/>
</LinearLayout>